--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,66 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title data-t>Anote Gateway</title>
-   <meta name="description" data-attr-t data-attr-t-interpolate content-t="Anote Gateway">
+   <meta name="description" content="Anote Gateway">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- <link rel="icon" type="image/png" href="./img/favicon.png" /> -->
+   <link rel="icon" type="image/png" href="./img/favicon.png" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
    <link rel="stylesheet" href="./custom.css">
-   <meta property="og:url" data-attr-t data-attr-t-interpolate content-t=""/>
+   <meta property="og:url" content=""/>
    <meta property="og:type"               content="article" />
-   <meta property="og:title" data-attr-t data-attr-t-interpolate content-t=""/>
-   <meta property="og:description" data-attr-t data-attr-t-interpolate content-t=""/>
-   <meta property="og:image" data-attr-t data-attr-t-interpolate content-t="" />
+   <meta property="og:title" content=""/>
+   <meta property="og:description" content=""/>
+   <meta property="og:image" content="" />
 </head>
 
 <body>
 
    <!-- Loading Page -->
    <div class="container" style="padding: 0 30px;" id="page-loading">
-      
-
+      <div class="container" style="padding: 0 30px;" id="page-loading">
+         <div class="row">
+             <div class="col-0 col-lg-3"></div>
+             <div class="col-12 col-lg-6 text-center">
+                 <div class="bg-light p-md-5 py-5 border shadow-lg my-5">
+                     <div class="row">
+                         <div class="col"></div>
+                         <div class="col-10">
+                             <img src-t="./img/logo.png" data-attr-t data-attr-t-interpolate alt-t="Anote Gateway"
+                                 class="img-fluid" style="max-height: 70px;">
+                         </div>
+                         <div class="col"></div>
+                     </div>
+                     <div class="row mt-4" id="loading">
+                        <div class="d-flex justify-content-center">
+                            <div class="spinner-border text-danger" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="row mt-4" style="display: none;" id="error">
+                        <div class="alert alert-danger mb-0" role="alert">
+                           <strong><u>Please open Anote Gateway using Trust wallet!</u></strong>
+                        </div>
+                     </div>
+                     <div class="row mt-4 text-start" style="display: none;" id="success">
+                        <h2>Anote / BSC Gateway</h2>
+                        <h5><u>Anote -> BSC</u></h5>
+                        <div class="d-grid mt-2">
+                           <button class="btn-lg btn-success">Withdraw to BSC</button>
+                        </div>
+                        <h5 class="mt-3"><u>BSC -> Anote</u></h5>
+                        <div class="d-grid mt-2">
+                           <label class="form-label fw-bold" data-t>Amount</label>
+                           <input type="text" class="form-control" id="amount">
+                           <button class="btn-lg btn-success mt-3">Send to Anote</button>
+                        </div>
+                     </div>
+                 </div>
+             </div>
+             <div class="col-0 col-lg-3"></div>
+         </div>
+     </div>
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
