--- a/src/index.html
+++ b/src/index.html
@@ -20,50 +20,49 @@
 <body>
 
    <!-- Loading Page -->
-   <div class="container" style="padding: 0 30px;" id="page-loading">
-      <div class="container" style="padding: 0 30px;" id="page-loading">
-         <div class="row">
-             <div class="col-0 col-lg-3"></div>
-             <div class="col-12 col-lg-6 text-center">
-                 <div class="bg-light p-md-5 py-5 border shadow-lg my-5">
-                     <div class="row">
-                         <div class="col"></div>
-                         <div class="col-10">
-                             <img src-t="./img/logo.png" data-attr-t data-attr-t-interpolate alt-t="Anote Gateway"
-                                 class="img-fluid" style="max-height: 70px;">
-                         </div>
-                         <div class="col"></div>
-                     </div>
-                     <div class="row mt-4" id="loading">
-                        <div class="d-flex justify-content-center">
-                            <div class="spinner-border text-danger" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>
+   <div class="container">
+      <div class="row">
+            <div class="col-0 col-lg-3"></div>
+            <div class="col-12 col-lg-6 text-center m-0 p-0">
+               <div class="bg-light p-5 border shadow-lg m-4">
+                  <div class="row">
+                        <div class="col"></div>
+                        <div class="col-10">
+                           <img src-t="./img/logo.png" data-attr-t data-attr-t-interpolate alt-t="Anote Gateway"
+                              class="img-fluid" style="max-height: 70px;">
                         </div>
+                        <div class="col"></div>
+                  </div>
+                  <div class="row mt-4" id="loading">
+                     <div class="d-flex justify-content-center">
+                           <div class="spinner-border text-danger" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                           </div>
                      </div>
-                     <div class="row mt-4" style="display: none;" id="error">
-                        <div class="alert alert-danger mb-0" role="alert">
-                           <strong><u>Please open Anote Gateway using Trust wallet!</u></strong>
-                        </div>
+                  </div>
+                  <div class="row mt-4" style="display: none;" id="error">
+                     <div class="alert alert-danger mb-0" role="alert">
+                        <strong><u>Please open Anote Gateway using Trust wallet!</u></strong>
                      </div>
-                     <div class="row mt-4 text-start" style="display: none;" id="success">
-                        <h2>Anote / BSC Gateway</h2>
-                        <h5><u>Anote -> BSC</u></h5>
-                        <div class="d-grid mt-2">
-                           <button class="btn-lg btn-success">Withdraw to BSC</button>
-                        </div>
-                        <h5 class="mt-3"><u>BSC -> Anote</u></h5>
-                        <div class="d-grid mt-2">
-                           <label class="form-label fw-bold" data-t>Amount</label>
-                           <input type="text" class="form-control" id="amount">
-                           <button class="btn-lg btn-success mt-3">Send to Anote</button>
-                        </div>
+                  </div>
+                  <div class="row mt-4 text-start" style="display: none;" id="success">
+                     <h2>Anote / BSC Gateway</h2>
+                     <h5><u>Anote -> BSC</u></h5>
+                     <div class="d-grid mt-2">
+                        <button class="btn-lg btn-secondary" disabled id="wbtn">Withdraw to BSC</button>
+                        <p class="text-danger mt-1 mb-0" id="nowe" style="display: none;">You have no active withdrawals.</p>
                      </div>
-                 </div>
-             </div>
-             <div class="col-0 col-lg-3"></div>
-         </div>
-     </div>
+                     <h5 class="mt-3"><u>BSC -> Anote</u></h5>
+                     <div class="d-grid mt-2">
+                        <label class="form-label fw-bold" data-t>Amount</label>
+                        <input type="text" class="form-control" id="amount">
+                        <button class="btn-lg btn-success mt-3">Send to Anote</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-0 col-lg-3"></div>
+      </div>
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
