--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                         <input type="text" class="form-control" id="address">
                         <label class="form-label fw-bold mt-2">Amount</label>
                         <input type="text" class="form-control" id="amount">
-                        <p class="text-danger mb-0 mt-1" id="errMsg" style="display: none;"></p>
+                        <p class="text-danger mb-0 mt-1 text-break" id="errMsg" style="display: none;"></p>
                         <button class="btn-lg btn-success mt-3" id="dbtn">Send to Anote</button>
                      </div>
                   </div>
